fix z-index

--- a/src/app/portfolio/project/project.component.scss
+++ b/src/app/portfolio/project/project.component.scss
@@ -292,6 +292,7 @@ h3 {
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
+  z-index: 200;
 
   button {
     border-style: none;
